2012-04-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (asmOp): always keep pointer to operand in asmop
	* src/hc08/ralloc2.cc (instruction_cost): reenable !, IFX, and CAST

2012-04-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.c (newBoolLink): return bool instead of bit if no
	  bit memory.
	* src/hc08/gen.c: Fixed no register assigned to iTemp for IFX.
	  Guarded more instances of emitLabel for dry run

2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/gen.c:
	  Fix genPointerGet with postincrement and result in h.

2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-920428-1.c:
	  Reformatted test.

2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/gen.c:
	  Fix handling of isFree for register operands.

2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/gen.c:
	  More flexible use of A in cast.

2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc:
	  Fix checking of XA and reenable use of assignment.
	* src/hc08/gen.c:
	  Additional debugging output.

2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCset.c:
	  Additional assertion.
	* src/hc08/ralloc.c:
	  Avoid buffer overflow.
	* src/hc08/ralloc2.cc:
	  Do not use assignment for now.

2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.h,
	  src/SDCCicode.c:
	  Made isOperandLiteral() work on const operand *.

2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc.c:
	  Cleanup.
	* src/hc08/gen.c:
	  Made genDjnz() more flexible.
	* src/hc08/ralloc2.cc:
	  Disallow X, A for now.

2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc,
	  src/hc08/ralloc2.cc: