@@ -1,3 +1,10 @@
+2012-04-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/hc08/ralloc.h,
+	  src/hc08/ralloc2.cc,
+	  src/hc08/gen.c:
+	  Introduce isDead for registers.
+
 2012-04-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/hc08/gen.c (asmOp): always keep pointer to operand in asmop
